--- a/preamble.tex
+++ b/preamble.tex
@@ -4,6 +4,7 @@
 %\usepackage{toptesi}
 \usepackage{xcolor}
 \usepackage{braket}
+\usepackage{dsfont}
 \usepackage{amsmath}
 \usepackage{amsthm}
 \usepackage{amssymb}
