--- a/quantum-estimation.tex
+++ b/quantum-estimation.tex
@@ -4,6 +4,7 @@
 
 \begin{document}
 \tableofcontents
+\input{chapters/introduction.tex}
 \input{chapters/probability.tex}
 \input{chapters/quantum.tex}
 \input{chapters/quant-inf.tex}
