chapters descriptions and citations

--- a/quantum-estimation.tex
+++ b/quantum-estimation.tex
@@ -3,10 +3,15 @@
 \input{preamble.tex}
 
 \begin{document}
+
 \tableofcontents
+
 \input{chapters/introduction.tex}
 \input{chapters/probability.tex}
 \input{chapters/quantum.tex}
 \input{chapters/quant-inf.tex}
-%\input{chapters/appendix.tex}
+
+\bibliographystyle{unsrt}
+\bibliography{quantum-estimation}
+
 \end{document}
