--- a/preamble.tex
+++ b/preamble.tex
@@ -1,7 +1,6 @@
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage[italian,english]{babel}
-%\usepackage{toptesi}
 \usepackage{xcolor}
 \usepackage{braket}
 \usepackage{dsfont}
@@ -11,6 +10,7 @@
 \usepackage{mathtools}
 \usepackage{MnSymbol}
 \usepackage{cleveref}
+\usepackage{url}
 
 
 \theoremstyle{plain}
