--- a/quantum-estimation.bib
+++ b/quantum-estimation.bib
@@ -7,7 +7,6 @@
   series = {Translations of {{Mathematical}}                         {{Monographs}}},
   volume = {191},
   publisher = {American Mathematical                     Society},
-  address = {Providence, Rhode                     Island},
   doi = {10.1090/mmono/191}
 }
 
@@ -99,7 +98,6 @@
   year = {1987},
   series = {Undergraduate {{Texts}} in {{Mathematics}}},
   publisher = {Springer},
-  address = {New York, NY},
   doi = {10.1007/978-1-4757-1949-9},
   keywords = {algebra,Eigenvalue,Eigenvector,linear algebra,matrices,matrix theory}
 }
@@ -109,33 +107,36 @@
   author = {Matsumoto, Keiji},
   year = {1997},
   number = {arXiv:2111.09667},
-  primaryclass = {quant-ph},
+  primaryclass = {quant-phy},
   publisher = {arXiv},
   doi = {10.48550/arXiv.2111.09667},
   archiveprefix = {arxiv},
-  keywords = {Quantum Physics}
+  keywords = {Quantum Physics},
+  howpublished = {\url{http://arxiv.org/abs/2111.09667}}
 }
 
-@misc{nielsenQuantumComputationQuantum2010,
+@book{nielsenQuantumComputationQuantum2012,
   title = {Quantum {{Computation}} and {{Quantum Information}}: 10th {{Anniversary Edition}}},
   author = {Nielsen, Michael A. and Chuang, Isaac L.},
-  year = {2010},
-  month = dec,
-  journal = {Higher Education from Cambridge University Press},
+  year = {2012},
+  month = jun,
+  edition = {1},
   publisher = {Cambridge University Press},
   doi = {10.1017/CBO9780511976667}
 }
 
-@misc{parisQuantumEstimationQuantum2009,
+@article{parisQuantumEstimationQuantum2009a,
   title = {Quantum Estimation for Quantum Technology},
   author = {Paris, Matteo G. A.},
   year = {2009},
-  month = aug,
-  number = {arXiv:0804.2981},
-  primaryclass = {quant-ph},
-  publisher = {arXiv},
-  archiveprefix = {arxiv},
-  keywords = {Quantum Physics}
+  month = jan,
+  journal = {International Journal of Quantum Information},
+  volume = {07},
+  number = {supp01},
+  pages = {125--137},
+  publisher = {World Scientific Publishing Co.},
+  doi = {10.1142/S0219749909004839},
+  keywords = {Fisher information,Quantum estimation}
 }
 
 @book{schutzGeometricalMethodsMathematical1980,
@@ -143,6 +144,5 @@
   author = {Schutz, Bernard F.},
   year = {1980},
   publisher = {Cambridge University Press},
-  address = {Cambridge},
   doi = {10.1017/CBO9781139171540}
 }
