--- a/preamble.tex
+++ b/preamble.tex
@@ -38,7 +38,7 @@
 \WarningFilter[ref]{latex}
   {There were undefined references }
 
-\ActivateWarningFilters[ref]
-\ActivateWarningFilters[todo]
+%\ActivateWarningFilters[ref]
+%\ActivateWarningFilters[todo]
 
 \newcommand{\myPH}{\mathbf{P}\mathcal{H}}
