--- a/quantum-estimation.bib
+++ b/quantum-estimation.bib
@@ -20,6 +20,16 @@
   doi = {10.1017/9781139207010}
 }
 
+@book{chernComplexManifoldsPotential1995,
+  title = {Complex Manifolds without Potential Theory: With an Appendix on the Geometry of Characteristic Classes},
+  author = {Chern, Shiing-shen},
+  year = {1995},
+  series = {Universitext},
+  edition = {2nd ed., rev. print},
+  publisher = {Springer},
+  lccn = {515.9}
+}
+
 @article{contrerasGeometryMixedStates2016,
   title = {On the Geometry of Mixed States and the {{Fisher}} Information Tensor},
   author = {Contreras, I. and Ercolessi, E. and Schiavina, M.},
@@ -111,8 +121,7 @@
   publisher = {arXiv},
   doi = {10.48550/arXiv.2111.09667},
   archiveprefix = {arxiv},
-  keywords = {Quantum Physics},
-  howpublished = {\url{http://arxiv.org/abs/2111.09667}}
+  keywords = {Quantum Physics}
 }
 
 @book{nielsenQuantumComputationQuantum2012,
@@ -137,6 +146,25 @@
   publisher = {World Scientific Publishing Co.},
   doi = {10.1142/S0219749909004839},
   keywords = {Fisher information,Quantum estimation}
+}
+
+@misc{sakuraiModernQuantumMechanics2020,
+  title = {Modern {{Quantum Mechanics}}},
+  author = {Sakurai, J. J. and Napolitano, Jim},
+  year = {2020},
+  month = sep,
+  journal = {Higher Education from Cambridge University Press},
+  publisher = {Cambridge University Press},
+  doi = {10.1017/9781108587280}
+}
+
+@book{sakuraiModernQuantumMechanics2021,
+  title = {Modern Quantum Mechanics},
+  author = {Sakurai, Jun J. and Napolitano, Jim},
+  year = {2021},
+  edition = {Third edition},
+  publisher = {Cambridge University Press},
+  doi = {10.1017/9781108587280}
 }
 
 @book{schutzGeometricalMethodsMathematical1980,
