--- a/preamble.tex
+++ b/preamble.tex
@@ -1,6 +1,7 @@
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage[italian,english]{babel}
+\usepackage{geometry}
 \usepackage{xcolor}
 \usepackage{braket}
 \usepackage{dsfont}
