abstract and title

--- a/quantum-estimation.bib
+++ b/quantum-estimation.bib
@@ -32,7 +32,7 @@
 
 @article{contrerasGeometryMixedStates2016,
   title = {On the Geometry of Mixed States and the {{Fisher}} Information Tensor},
-  author = {Contreras, I. and Ercolessi, E. and Schiavina, M.},
+  author = {Contreras, Ivan and Ercolessi, Elisa and Schiavina, Michele},
   year = {2016},
   month = jun,
   journal = {Journal of Mathematical Physics},
@@ -44,7 +44,7 @@
 
 @article{ercolessiEquationsMotionCanonical2010,
   title = {From the Equations of Motion to the Canonical Commutation Relations},
-  author = {Ercolessi, E. and Marmo, G. and Morandi, G.},
+  author = {Ercolessi, Elisa and Marmo, Giuseppe and Morandi, Giuseppe},
   year = {2010},
   month = dec,
   journal = {La Rivista del Nuovo Cimento},
@@ -56,7 +56,7 @@
 
 @article{facchiClassicalQuantumFisher2010,
   title = {Classical and Quantum {{Fisher}} Information in the Geometrical Formulation of Quantum Mechanics},
-  author = {Facchi, Paolo and Kulkarni, Ravi and Man'ko, V.I. and Marmo, Giuseppe and Sudarshan, E.C.G. and Ventriglia, Franco},
+  author = {Facchi, Paolo and Kulkarni, Ravi and Man'ko, Vladimir I. and Marmo, Giuseppe and Sudarshan, E. C. George and Ventriglia, Franco},
   year = {2010},
   month = nov,
   journal = {Physics Letters A},
@@ -117,9 +117,9 @@
   author = {Matsumoto, Keiji},
   year = {1997},
   number = {arXiv:2111.09667},
+  eprint = {2111.09667},
   primaryclass = {quant-phy},
   publisher = {arXiv},
-  doi = {10.48550/arXiv.2111.09667},
   archiveprefix = {arxiv},
   keywords = {Quantum Physics}
 }
@@ -155,7 +155,7 @@
   month = sep,
   journal = {Higher Education from Cambridge University Press},
   publisher = {Cambridge University Press},
-  doi = {10.1017/9781108587280}
+  howpublished = {https://www.cambridge.org/highereducation/books/modern-quantum-mechanics/DF43277E8AEDF83CC12EA62887C277DC}
 }
 
 @book{sakuraiModernQuantumMechanics2021,
