--- a/quantum-estimation.tex
+++ b/quantum-estimation.tex
@@ -1,20 +1,29 @@
-\documentclass[a4paper,11pt,twoside]{book}
+\documentclass[a4paper,12pt,oneside,titlepage]{report}
 \input{preamble.tex}
 
 \begin{document}
 
-\frontmatter
-\input{chapters/frontmatter.tex}
+%\frontmatter
+\input{chapters/frontmatter/title.tex}
+\cleardoublepage
+\input{chapters/frontmatter/abstract-ita.tex}
+\cleardoublepage
+\input{chapters/frontmatter/abstract-eng.tex}
 \cleardoublepage
 \tableofcontents
+\cleardoublepage
 
-\mainmatter
+%\mainmatter
 \input{chapters/introduction.tex}
+\cleardoublepage
 \input{chapters/probability.tex}
+\cleardoublepage
 \input{chapters/quantum.tex}
+\cleardoublepage
 \input{chapters/quant-inf.tex}
+\cleardoublepage
 
-\backmatter
+%\backmatter
 \bibliographystyle{unsrt}
 \bibliography{quantum-estimation}
 
