--- a/quantum-estimation.tex
+++ b/quantum-estimation.tex
@@ -4,10 +4,12 @@
 \begin{document}
 
 %\frontmatter
+\selectlanguage{italian}
 \input{chapters/frontmatter/title.tex}
 \cleardoublepage
 \input{chapters/frontmatter/abstract-ita.tex}
 \cleardoublepage
+\selectlanguage{english}
 \input{chapters/frontmatter/abstract-eng.tex}
 \cleardoublepage
 \tableofcontents
