--- a/preamble.tex
+++ b/preamble.tex
@@ -13,6 +13,7 @@
 \usepackage{cleveref}
 \usepackage{url}
 
+\numberwithin{equation}{section}
 
 \theoremstyle{plain}
 \newtheorem{theorem}{Theorem}
