--- a/preamble.tex
+++ b/preamble.tex
@@ -2,6 +2,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[italian,english]{babel}
 \usepackage{geometry}
+\usepackage{emptypage}
 \usepackage{xcolor}
 \usepackage{braket}
 \usepackage{dsfont}
