--- a/quantum-estimation.bib
+++ b/quantum-estimation.bib
@@ -155,7 +155,7 @@
   month = sep,
   journal = {Higher Education from Cambridge University Press},
   publisher = {Cambridge University Press},
-  howpublished = {https://www.cambridge.org/highereducation/books/modern-quantum-mechanics/DF43277E8AEDF83CC12EA62887C277DC}
+  doi = {10.1017/9781108587280}
 }
 
 @book{sakuraiModernQuantumMechanics2021,
@@ -167,10 +167,33 @@
   doi = {10.1017/9781108587280}
 }
 
+@article{schnabelQuantumMetrologyGravitational2010,
+  title = {Quantum Metrology for Gravitational Wave Astronomy},
+  author = {Schnabel, Roman and Mavalvala, Nergis and McClelland, David E. and Lam, Ping K.},
+  year = {2010},
+  month = nov,
+  journal = {Nature Communications},
+  volume = {1},
+  number = {1},
+  pages = {121},
+  publisher = {Nature Publishing Group},
+  doi = {10.1038/ncomms1122},
+  copyright = {2010 Springer Nature Limited},
+  keywords = {Cosmology,Quantum mechanics}
+}
+
 @book{schutzGeometricalMethodsMathematical1980,
   title = {Geometrical {{Methods}} of {{Mathematical Physics}}},
   author = {Schutz, Bernard F.},
   year = {1980},
   publisher = {Cambridge University Press},
   doi = {10.1017/CBO9781139171540}
+}
+
+@misc{smite-meisterEnglishBlochSphere2009,
+  title = {English:  {{Bloch}} Sphere, a Geometrical Representation of a Two-Level Quantum System.},
+  author = {{Smite-Meister}},
+  year = {2009},
+  month = jan,
+  copyright = {Permission is granted to copy, distribute and/or modify this document under the terms of the GNU Free Documentation License, Version 1.2 or any later version published by the Free Software Foundation; with no Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included in the section entitled GNU Free Documentation License.http://www.gnu.org/copyleft/fdl.htmlGFDLGNU Free Documentation Licensetruetrue}
 }
