--- a/quantum-estimation.tex
+++ b/quantum-estimation.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,12pt,twoside,titlepage]{report}
+\documentclass[a4paper,12pt,oneside,titlepage]{report}
 \input{preamble.tex}
 
 \begin{document}
